--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "express-validation": "^1.0.2",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mongoose": "^5.4.2",
     "morgan": "~1.9.0"
   }
 }
