--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
@@ -15,6 +15,7 @@
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
     "morgan": "~1.9.0"
   }
